# claude-ipc-mcp

./: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  LICENSE  MIGRATION_GUIDE.md  QUICK_START.md  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: AI_INTEGRATION_GUIDE.md  ARCHITECTURE.md  AUTO_CHECK_GUIDE.md  AUTO_CHECK_TECHNICAL.md  CLAUDE_HOOKS.md  FEATURES.md  FRED_MIGRATION_GUIDE.md  GEMINI_CLI_SETUP.md  GEMINI_SETUP.md  NATURAL_LANGUAGE.md  ROADMAP.md  SECURITY.md  SECURITY_QUICKSTART.md  SERVER_REDUNDANCY.md  SETUP_GUIDE.md  TROUBLESHOOTING.md
hooks/: check_messages.py  ipc_auto_check_hook.py
scripts/: install-mcp.sh
src/: claude_ipc_server.py
test/: debug_session.py  test_ipc.sh  test_security.py
tools/: fred_qna.md  ipc_auto_check_manager.py  ipc_check.py  ipc_list.py  ipc_register.py  ipc_rename.py  ipc_send.py
