[project]
name = "claude-ipc-mcp"
version = "2.0.0"
description = "AI-to-AI communication using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Claude IPC Team" }
]
keywords = ["mcp", "ai", "ipc", "communication", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp",
]

[project.urls]
"Homepage" = "https://github.com/jdez427/claude-ipc-mcp"
"Bug Tracker" = "https://github.com/jdez427/claude-ipc-mcp/issues"
"Documentation" = "https://github.com/jdez427/claude-ipc-mcp/tree/main/docs"

[project.scripts]
claude-ipc-mcp = "claude_ipc_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "tools"]

[tool.hatch.build]
sources = ["src"]

[tool.uv]
dev-dependencies = [
    "black>=24.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false